// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> check how renders should render with <LoadingOverlay /> 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ clkCDw"
    color="blue"
    disabled=""
    type="button"
  >
    Test button
    <div
      class="sc-eCssSg ida-dSY"
      data-testid="LoadingOverlay"
    >
      <div
        class="sc-dlfnbm fSwSVd"
        data-testid="Loader"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<Button /> check how renders should render without <LoadingOverlay /> 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ eqGxsp"
    color="blue"
    type="button"
  >
    Test button
  </button>
</DocumentFragment>
`;
